--- a/reactComponents.html
+++ b/reactComponents.html
@@ -11,19 +11,6 @@
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"></script>
-    <script type="text/babel">
-        function getName(){
-            return "Hulk Hogan for Prez!"
-        }
-
-        const hulk = "http://www.thestar.com/content/dam/thestar/entertainment/2016/03/20/turning-the-clock-back-on-wrestlemania-vi/hulkhogan.jpg"; 
-        ReactDOM.render(
-            <div>
-                <h1>I love React {2+8} times! My mantra is {getName()}</h1>,
-                <img src={hulk} />
-            </div>,
-            document.getElementById('root')
-        )
-    </script>
+    <script type = "text/babel" src="reactComponents.js"></script>
 </body>
 </html>
