--- a/reactComponents.html
+++ b/reactComponents.html
@@ -11,6 +11,7 @@
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"></script>
-    <script type = "text/babel" src="reactComponents.js"></script>
+    <script type = "text/babel" src="./Card.js"></script>
+    <script type = "text/babel" src="./reactComponents.js"></script>
 </body>
 </html>
