--- a/reactArrayComponents.html
+++ b/reactArrayComponents.html
@@ -10,13 +10,12 @@
 </head>
 <body>
     <div id="root"></div>
-    <div id="boot"></div>
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"></script>
     <script type = "text/babel" src="./Data.js"></script>
-    <script type = "text/babel" src="./Card.js"></script>
+    <script type = "text/babel" src="./CardClass.js"></script>
     <!-- <script type = "text/babel" src="./reactComponents.js"></script> -->
-    <script type = "text/babel" src="./dataComponents.js"></script>
+    <script type = "text/babel" src="./reactArrayClassComponents.js"></script>
 </body>
 </html>
